--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -6,3 +6,21 @@
 ## 4.确定性：算法的每一步都有明确的含义，不会出现二义性
 ## 5.可行性：算法的每一步都是可行的。也就是说每一步都能执行有限的次数完成。
 
+简单demo
+
+如果a+b+c = 1000, 并且a^2+b^2=c^2 (a,b,c)为自然数，如何求出所有a,b,c所有的可能组合？
+
+枚举法：
+
+<!-- import time
+
+start_time = time.time()
+for a in range(0,1001):
+    for b in range(0,1001):
+        for c in range(0,1001):
+            if a+b+c== 1000 and a**2 + b**2 == c**2 :
+                print("a,b,c:%d, %d, %d" %(a,b,c))
+
+end_time = time.time()
+
+print("time:%d" % (end_time-start_time)) -->
