--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -11,8 +11,8 @@
 如果a+b+c = 1000, 并且a^2+b^2=c^2 (a,b,c)为自然数，如何求出所有a,b,c所有的可能组合？
 
 枚举法：
-
-<!-- import time
+"""
+import time
 
 start_time = time.time()
 for a in range(0,1001):
@@ -23,4 +23,5 @@ for a in range(0,1001):
 
 end_time = time.time()
 
-print("time:%d" % (end_time-start_time)) -->
+print("time:%d" % (end_time-start_time))
+"""
