--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -11,7 +11,8 @@
 如果a+b+c = 1000, 并且a^2+b^2=c^2 (a,b,c)为自然数，如何求出所有a,b,c所有的可能组合？
 
 枚举法：
-"""
+<pre>
+    <code>
 import time
 
 start_time = time.time()
@@ -24,4 +25,5 @@ for a in range(0,1001):
 end_time = time.time()
 
 print("time:%d" % (end_time-start_time))
-"""
+    </code>
+</pre>
