--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -1,16 +1,17 @@
-# 算法的五大特性
+# 算法的引入
+## 1.算法的五大特性
 
-## 1.输入：算法具有0个或者多个输入
-## 2.输出：算法具有0个或者多个输出
-## 3.有穷性：算法在有限的步骤后悔自动结束，不是无限循环，并且在一个可接受时间范围内
-## 4.确定性：算法的每一步都有明确的含义，不会出现二义性
-## 5.可行性：算法的每一步都是可行的。也就是说每一步都能执行有限的次数完成。
+### 输入：算法具有0个或者多个输入
+### 输出：算法具有0个或者多个输出
+### 有穷性：算法在有限的步骤后悔自动结束，不是无限循环，并且在一个可接受时间范围内
+### 确定性：算法的每一步都有明确的含义，不会出现二义性
+### 可行性：算法的每一步都是可行的。也就是说每一步都能执行有限的次数完成。
 
 简单demo
 
 如果a+b+c = 1000, 并且a^2+b^2=c^2 (a,b,c)为自然数，如何求出所有a,b,c所有的可能组合？
 
-枚举法：
+### 枚举法：
 <pre>
     <code>
 import time
