--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -55,6 +55,8 @@ print("time:%d" % (end_time-start_time))
 
 在趋向无穷的极限意义下，函数f的增长速度受到函数g的约束，则函数f与函数g的特征相似。
 
-大O计法，The Big O ，时间复杂度为 T(n) = O(g(n)) ,则O(g(n))为该算法的渐近时间复杂度，
+### 大O计法，The Big O
+
+时间复杂度为 T(n) = O(g(n)) ,则O(g(n))为该算法的渐近时间复杂度，
 
 简称时间复杂度 T(n)。
