--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -60,3 +60,40 @@ print("time:%d" % (end_time-start_time))
 时间复杂度为 T(n) = O(g(n)) ,则O(g(n))为该算法的渐近时间复杂度，
 
 简称时间复杂度 T(n)。
+
+
+### 最坏时间复杂度
+
+算法运行最多需要多少基本操作
+
+### 最优时间复杂度
+
+算法运行最少需要多少基本操作
+
+### 平均时间复杂度
+
+算法完成工作平均需要多少基本操作
+
+### 时间复杂度的几条基本计算规则
+
+1.基本操作：即只有常数项，时间复杂度为O(1)
+
+2.顺序结构: 时间复杂度按加法进行计算
+
+3.循环结构: 时间复杂度按乘法进行计算
+
+4.分支结构：时间复杂度取最大值
+
+5.判断一个算法的效率时，往往只需要关注操作数量的最高次项，其它次要项和常数项可以忽略
+
+6.在没有特殊说明时，我们所分析的算法的时间复杂度都是指最坏时间复杂度
+
+
+### 常见的时间复杂度
+
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/0.0.png)
+
+
+### 常见时间复杂度之间的关系
+
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/0.1.png)
