--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -11,7 +11,7 @@
 
 如果a+b+c = 1000, 并且a^2+b^2=c^2 (a,b,c)为自然数，如何求出所有a,b,c所有的可能组合？
 
-### 枚举法：
+## 枚举法：
 <pre>
     <code>
 import time
@@ -33,7 +33,7 @@ print("time:%d" % (end_time-start_time))
          T = N * N * N* 2
 时间复杂度: T(n) = n^3 *2
 
-### 优化第二版：减少运算步骤
+## 优化第二版：减少运算步骤
 <pre>
     <code>
 import time
@@ -55,26 +55,26 @@ print("time:%d" % (end_time-start_time))
 
 在趋向无穷的极限意义下，函数f的增长速度受到函数g的约束，则函数f与函数g的特征相似。
 
-### 大O计法，The Big O
+## 大O计法，The Big O
 
 时间复杂度为 T(n) = O(g(n)) ,则O(g(n))为该算法的渐近时间复杂度，
 
 简称时间复杂度 T(n)。
 
 
-### 最坏时间复杂度
+## 最坏时间复杂度
 
 算法运行最多需要多少基本操作
 
-### 最优时间复杂度
+## 最优时间复杂度
 
 算法运行最少需要多少基本操作
 
-### 平均时间复杂度
+## 平均时间复杂度
 
 算法完成工作平均需要多少基本操作
 
-### 时间复杂度的几条基本计算规则
+## 时间复杂度的几条基本计算规则
 
 1.基本操作：即只有常数项，时间复杂度为O(1)
 
@@ -89,11 +89,11 @@ print("time:%d" % (end_time-start_time))
 6.在没有特殊说明时，我们所分析的算法的时间复杂度都是指最坏时间复杂度
 
 
-### 常见的时间复杂度
+## 常见的时间复杂度
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/0.0.png)
 
 
-### 常见时间复杂度之间的关系
+## 常见时间复杂度之间的关系
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/0.1.png)
