--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -97,3 +97,38 @@ print("time:%d" % (end_time-start_time))
 ## 常见时间复杂度之间的关系
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/0.1.png)
+
+
+## Python 内置类型性能分析
+### timeit 模块
+<pre>
+    <code>
+Class timeit.Timer(stmt='pass', setup='pass',timer =<timer function>)
+
+# timer：是测量小段代码执行速度的类
+
+# stmt：是要测试的代码语句 (statement);
+
+# setup：是运行代码时需要的设置；
+
+# timer：是一个定时器函数，与平台有关.
+
+timeit.Timer.timeit(number=  100000)
+
+# number 次数
+
+    </code>
+</pre>
+
+Demo：
+<pre>
+    <code>
+from timeit import Timer
+def test1():
+    li = []
+    for i in range(10000):
+        li.append(i)
+timer1 = Timer("test1()", "from __main__ import test1")
+timer1.timeit(1000)
+    </code>
+</pre>
