--- a/1.算法的引入.md
+++ b/1.算法的引入.md
@@ -132,3 +132,10 @@ timer1 = Timer("test1()", "from __main__ import test1")
 timer1.timeit(1000)
     </code>
 </pre>
+
+## List内置操作的时间复杂度
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/0.2.png)
+
+
+## dict内置操作的时间复杂度
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/0.3.png)
