--- a/3.基本顺序表与元素外围顺序表.md
+++ b/3.基本顺序表与元素外围顺序表.md
@@ -4,3 +4,15 @@
 
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/%E9%A1%BA%E5%BA%8F%E8%A1%A8.png)
+
+
+顺序表，将元素顺序地存放在一块连续的存储区里，元素间的顺序关系由它们的存储顺序自然表示。
+
+## 顺序表的两种存储方式：
+
+
+元素内置（一体式结构）：表里存储的元素大小固定,一般用于存储占据统一空间大小的数据。
+
+元素外置（分离式结构）：表里只存储数据的地址，
+
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/sxb1.png)
