--- a/3.基本顺序表与元素外围顺序表.md
+++ b/3.基本顺序表与元素外围顺序表.md
@@ -13,6 +13,25 @@
 
 元素内置（一体式结构）：表里存储的元素大小固定,一般用于存储占据统一空间大小的数据。
 
-元素外置（分离式结构）：表里只存储数据的地址，
+元素外置（分离式结构）：表里只存储数据的地址，然后通过数据地址来访问数据，
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/sxb1.png)
+
+
+## 顺序表的结构
+
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/sxb2.png)
+
+容量和元素个数是表头信息，剩下是数据区
+
+容量指的是最大可以存储的元素个数，元素个数是指当前空间已经存储了多少个元素。
+
+## 顺序表的两种实现方法
+
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/sxb3.png)
+
+
+## 元素内置和元素外置实例：
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/sxb4.png)
+
+一体式的数据结构，在给数据扩容的时候，需要重新申请内存空间，然后从原数据搬迁，然后释放掉，同时表头信息也要搬迁。分体式数据，表头信息不用搬迁，只需要重新把地址指向新的数据地址就可以了。为了考虑以后数据的变动，一般会才用分离式。
