--- a/3.基本顺序表与元素外围顺序表.md
+++ b/3.基本顺序表与元素外围顺序表.md
@@ -34,4 +34,18 @@
 ## 元素内置和元素外置实例：
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/sxb4.png)
 
-一体式的数据结构，在给数据扩容的时候，需要重新申请内存空间，然后从原数据搬迁，然后释放掉，同时表头信息也要搬迁。分体式数据，表头信息不用搬迁，只需要重新把地址指向新的数据地址就可以了。为了考虑以后数据的变动，一般会才用分离式。
+## 元素存储区扩容和替换
+
+一体式数据：在给数据扩容或者替换的时候，需要重新申请内存空间，然后从原数据搬迁，同时表头信息也要搬迁然后释放掉原数据占的内存。
+
+分体式数据：数据扩容时，表头信息不用搬迁，只需要重新把表头信息中的地址指向新的数据地址就可以了。为了考虑以后数据的变动，一般会用分离式。
+
+若将数据区更换为存储空间更大的区域，则可以在不改变对象的前提下对其数据存储区进行扩容，所有使用这个表的地方都不用修改。这种技术实现的顺序表被称为动态顺序表，因为其容量可以在使用中动态变化。
+
+### 扩容的两种策略
+
+1.每次扩充增加固定数目的存储位置，如每次扩充增加10个元素位置，这种策略被称为线性增长。
+特点：节省空间，但是扩充操作频繁，操作次数多。
+
+2.每次扩容容量加倍，入每次扩充增加一倍存储空间。
+特点：减少了扩充操作的执行次数，但可能会浪费空间，以时间换空间，推荐的方式。
