--- a/9.队列.md
+++ b/9.队列.md
@@ -7,3 +7,64 @@
 队列是一种先进先出的(FIFO, First In First Out)的线性表。允许插入的一段为队尾，允许删除的一端为队头。队列不允许中间部位的进行操作！假设队列 q= (a1,a2,,....,an)，那么a1也就是队头元素，而an是队尾元素。这样我们就可以进行删除时，总是从a1开会，而插入时，总是在队列最后。这也比较符合我们通常生活中的习惯，排在第一个的优先出列，最后来的当然排在队伍最后。
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/queue.png)
+
+
+## 功能
+
+* Queue 创建一个空的队列
+* enqueue(item) 往队列中添加一个item元素
+* dequeue() 从队列头部删除一个元素
+* is_empty() 判断一个队列是否为空
+* size() 返回队列的大小
+
+
+## 代码实现
+
+<pre>
+<code>
+class Queue(object):
+    def __init__(self):
+        self.__queue = []
+    
+
+    def enqueue(self, item): # 往队列中添加一个item元素
+        self.__queue.append(item) # 尾部添加
+
+        # self.__queue.insert(0,item) # 头部添加
+
+    def dequeue(self): # 从队列头部删除一个元素
+
+        if self.__queue == []:
+            return None
+        else:
+            return self.__queue.pop(0) # 头部删除
+
+        # return self.__queue.pop() # 尾部删除
+
+
+    def is_empty(self): # 判断一个队列是否为空
+
+        return self.__queue == []
+
+    def size(self): # 返回队列的大小
+
+        return len(self.__queue)
+
+
+
+if __name__ == '__main__':
+    s = Queue()
+    s.enqueue(1)
+    s.enqueue(2)
+    s.enqueue(3)
+    s.enqueue(4)
+    s.enqueue(5)
+    print(s.size())
+    print(s.dequeue())
+    print(s.dequeue())
+    print(s.dequeue())
+    print(s.dequeue())
+    print(s.dequeue())
+
+</pre>
+</code>
