--- a/11.排序算法.md
+++ b/11.排序算法.md
@@ -18,3 +18,5 @@
 (3, 1)  (3, 7)  (4, 1)  (5, 6)  （维持次序）
 (3, 7)  (3, 1)  (4, 1)  (5, 6)  （次序被改变）
 </pre>
+
+不稳定排序算法可能会在相等的键值中改变纪录的相对次序，但是稳定排序算法从来不会如此。不稳定排序算法可以被特别地实现为稳定。作这件事情的一个方式是人工扩充键值的比较，如此在其他方面相同键值的两个对象间之比较，（比如上面的比较中加入第二个标准：第二个键值的大小）就会被决定使用在原先数据次序中的条目，当作一个同分决赛。然而，要记住这种次序通常牵涉到额外的空间负担。
