--- a/12.冒泡排序.md
+++ b/12.冒泡排序.md
@@ -1,7 +1,7 @@
 # 冒泡排序
 
 
-冒泡排序（英语：Bubble Sort）是一种简单的排序算法。它重复地遍历要排序的数列，一次比较两个元素，如果他们的顺序错误就把他们交换过来。遍历数列的工作是重复地进行直到没有再需要交换，也就是说该数列已经排序完成。这个算法的名字由来是因为越小的元素会经由交换慢慢“浮”到数列的顶端。
+冒泡排序（Bubble Sort）是一种简单的排序算法。它重复地遍历要排序的数列，一次比较两个元素，如果他们的顺序错误就把他们交换过来。遍历数列的工作是重复地进行直到没有再需要交换，也就是说该数列已经排序完成。这个算法的名字由来是因为越小的元素会经由交换慢慢“浮”到数列的顶端。
 
 冒泡排序算法的运作如下：
 
@@ -14,3 +14,22 @@
 
 交换过程图示(第一次)：
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/bubblesort.jpg)
+
+那么我们需要进行n-1次冒泡过程，每次对应的比较次数如下图所示：
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/compare.bmp)
+
+<pre>
+<code>
+def bubble_sort(alist):
+    for j in range(len(alist)-1,0,-1):
+        # j表示每次遍历需要比较的次数，是逐渐减小的
+        for i in range(j):
+            if alist[i] > alist[i+1]:
+                alist[i], alist[i+1] = alist[i+1], alist[i]
+        print(alist)
+            
+
+li = [54,26,93,17,77,31,44,55,20]
+bubble_sort(li)
+</pre>
+</code>
