--- a/13.选择排序.md
+++ b/13.选择排序.md
@@ -31,6 +31,10 @@ print(alist)
 </pre>
 </code>
 
+## 动画演示：
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/Selection-Sort-Animation.gif)
+
+
 ## 时间复杂度
 
 * 最优时间复杂度：O(n^2)
