--- a/14.插入排序.md
+++ b/14.插入排序.md
@@ -5,7 +5,7 @@
 
 ## 插入排序分析
 
-![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/insert.jpg)
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/insert.png)
 
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/Insertion-sort-example.gif)
