--- a/scripts/12.冒泡排序.md
+++ b/scripts/12.冒泡排序.md
@@ -18,6 +18,9 @@
 那么我们需要进行n-1次冒泡过程，每次对应的比较次数如下图所示：
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/compare.bmp)
 
+
+## 冒泡排序的实现
+
 <pre>
 <code>
 def bubble_sort(alist):
