--- a/scripts/01.算法的引入.md
+++ b/scripts/01.算法的引入.md
@@ -29,9 +29,9 @@ print("time:%d" % (end_time-start_time))
     </code>
 </pre>
 
-运行次数: T = 1000 * 1000 * 1000 * 2
-         T = N * N * N* 2
-时间复杂度: T(n) = n^3 *2
+运行次数: T = 1000 * 1000 * 1000 * 2 </br>
+         T = N * N * N* 2 </br>
+时间复杂度: T(n) = n^3 *2 </br>
 
 ## 优化第二版：减少运算步骤
 <pre>
