--- a/scripts/21.二叉树的遍历.md
+++ b/scripts/21.二叉树的遍历.md
@@ -73,3 +73,111 @@ def breadth_travel(self):
         print(node.elem, end = ' ')
 </code>
 </pre>
+
+
+### 树的反推
+如果只给出两种遍历顺序，要求反推树的结构。
+只要给出的两个顺序中包含了中序遍历，就可以反推出原来的树结构。
+
+### 二叉树实现的全部代码
+
+<pre>
+<code>
+## 树的实现
+
+class Node(object):
+    
+    def __init__(self,item):
+        self.elem = item
+        self.lchild = None
+        self.rchild = None
+        
+class Tree(object):
+    """二叉树"""
+    
+    def __init__(self):
+        self.root = None
+    
+    '''添加元素'''
+    def add(self, item):
+        node =Node(item)
+        if self.root is None:
+            self.root = node
+            return
+        queue= [self.root]
+        while queue:
+            cur_node = queue.pop(0)
+            if cur_node.lchild is None:
+                cur_node.lchild = node
+                return
+            else:
+                queue.append(cur_node.lchild)
+            if cur_node.rchild is None:
+                cur_node.rchild = node
+                return
+            else:
+                queue.append(cur_node.rchild)
+                
+        
+    def breadth_travel(self):
+        """广度遍历"""
+        if self.root is None:
+             return
+        queue = [self.root]
+        while queue:
+            cur_node = queue.pop(0)
+            print(cur_node.elem)
+            if cur_node.lchild is not None:
+                queue.append(cur_node.lchild)
+            if cur_node.rchild is not None:
+                queue.append(cur_node.rchild)
+                
+    def preorder(self, node):
+        """先序遍历"""
+        if node is None:
+            return
+        print(node.elem, end = ' ')
+        
+        self.preorder(node.lchild)
+        
+        self.preorder(node.rchild)
+        
+        
+    def inorder(self,node):
+        '''中序遍历'''
+        
+        if node is None:
+            return        
+        self.inorder(node.lchild)
+        print(node.elem, end = ' ')
+        self.inorder(node.rchild)        
+            
+    def postorder(self,node):
+        '''后序'''
+        if node is None:
+            return
+        self.postorder(node.lchild)
+        self.postorder(node.rchild)
+        print(node.elem, end = ' ')
+    
+tree = Tree()
+tree.add(0)
+tree.add(1)
+tree.add(2)
+tree.add(3)
+tree.add(4)
+tree.add(5)
+tree.add(6)
+tree.add(7)
+tree.add(8)
+tree.add(9)
+tree.breadth_travel()
+print('')
+tree.preorder(tree.root)
+print('')
+tree.inorder(tree.root)
+print('')
+tree.postorder(tree.root)
+
+</code>
+</pre>
