--- a/scripts/21.二叉树的遍历.md
+++ b/scripts/21.二叉树的遍历.md
@@ -34,7 +34,7 @@ def breadth_travel(self):
 对于一颗二叉树，深度优先搜索(Depth First Search)是沿着树的深度遍历树的节点，尽可能深的搜索树的分支。
 那么深度遍历有重要的三种方法。这三种方式常被用于访问树的节点，它们之间的不同在于访问每个节点的次序不同。这三种遍历分别叫做先序遍历（preorder），中序遍历（inorder）和后序遍历（postorder）。我们来给出它们的详细定义，然后举例看看它们的应用。
 
-* 先序遍历 在先序遍历中，我们先访问根节点，然后递归使用先序遍历访问左子树,再递归使用先序遍历访问右子树:        根节点->左子树->右子树
+* 先序遍历 在先序遍历中，我们先访问根节点，然后递归使用先序遍历访问左子树,再递归使用先序遍历访问右子树:</br>根节点->左子树->右子树
 <pre>
 <code>
     def preorder(self, node):
@@ -48,7 +48,7 @@ def breadth_travel(self):
         self.preorder(node.rchild)
 </code>
 </pre>
-* 中序遍历 在中序遍历中，我们递归使用中序遍历访问左子树，然后访问根节点，最后再递归使用中序遍历访问右子树:    左子树->根节点->右子树
+* 中序遍历 在中序遍历中，我们递归使用中序遍历访问左子树，然后访问根节点，最后再递归使用中序遍历访问右子树:</br>左子树->根节点->右子树
 <pre>
 <code>
     def inorder(self,node):
@@ -61,7 +61,7 @@ def breadth_travel(self):
         self.inorder(node.rchild) 
 </code>
 </pre>
-* 后序遍历 在后序遍历中，我们先递归使用后序遍历访问左子树和右子树，最后访问根节点:                          左子树->右子树->根节点
+* 后序遍历 在后序遍历中，我们先递归使用后序遍历访问左子树和右子树，最后访问根节点:</br>左子树->右子树->根节点
 <pre>
 <code>
     def postorder(self,node):
