--- a/scripts/09.队列.md
+++ b/scripts/09.队列.md
@@ -6,7 +6,7 @@
 
 队列是一种先进先出的(FIFO, First In First Out)的线性表。允许插入的一段为队尾，允许删除的一端为队头。队列不允许中间部位的进行操作！假设队列 q= (a1,a2,,....,an)，那么a1也就是队头元素，而an是队尾元素。这样我们就可以进行删除时，总是从a1开会，而插入时，总是在队列最后。这也比较符合我们通常生活中的习惯，排在第一个的优先出列，最后来的当然排在队伍最后。
 
-![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/queue.png)
+![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/队列模型.png)
 
 
 ## 功能
