--- a/scripts/15.快速排序.md
+++ b/scripts/15.快速排序.md
@@ -18,8 +18,7 @@
 
 ## 快速排序的实现
 
-<pre>
-<code>
+'''python
 def quick_sort(alist, start, end):
     """快速排序"""
     
@@ -58,9 +57,7 @@ def quick_sort(alist, start, end):
     
     quick_sort(alist, start,low-1)
     quick_sort(alist,low+1, end)
-
-</code>
-</pre>
+'''
 
 ## 时间复杂度
 
