--- a/scripts/15.快速排序.md
+++ b/scripts/15.快速排序.md
@@ -18,7 +18,7 @@
 
 ## 快速排序的实现
 
-'''python
+```python
 def quick_sort(alist, start, end):
     """快速排序"""
     
@@ -57,7 +57,7 @@ def quick_sort(alist, start, end):
     
     quick_sort(alist, start,low-1)
     quick_sort(alist,low+1, end)
-'''
+```
 
 ## 时间复杂度
 
