--- a/scripts/10.双端队列.md
+++ b/scripts/10.双端队列.md
@@ -21,8 +21,8 @@
 
 ## 代码实现
 
-<pre>
-<code>
+
+```python
 class dequeue(object):
     def __init__(self):
         self.__queue = []
@@ -61,7 +61,7 @@ class dequeue(object):
         for i in self.__queue:
             output.append(i)
         return print(output)
-
+```
 
 
 if __name__ == '__main__':
