--- a/scripts/12.冒泡排序.md
+++ b/scripts/12.冒泡排序.md
@@ -21,8 +21,7 @@
 
 ## 冒泡排序的实现
 
-<pre>
-<code>
+```python
 def bubble_sort(alist):
     for j in range(len(alist)-1,0,-1):
         # j表示每次遍历需要比较的次数，是逐渐减小的
@@ -34,5 +33,4 @@ def bubble_sort(alist):
 
 li = [54,26,93,17,77,31,44,55,20]
 bubble_sort(li)
-</pre>
-</code>
+python
