--- a/scripts/13.选择排序.md
+++ b/scripts/13.选择排序.md
@@ -9,8 +9,7 @@
 排序过程：
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/selectionsort.jpg)
 
-<pre>
-<code>
+```python
 def selection_sort(alist):
     n = len(alist)
     # 需要进行n-1次选择操作
@@ -28,8 +27,7 @@ def selection_sort(alist):
 alist = [54,226,93,17,77,31,44,55,20]
 selection_sort(alist)
 print(alist)
-</pre>
-</code>
+```
 
 ## 动画演示：
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/Selection-Sort-Animation.gif)
