--- a/scripts/16.希尔排序.md
+++ b/scripts/16.希尔排序.md
@@ -13,8 +13,7 @@
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/shellsort.png)
 
 
-<pre>
-<code>
+```python
 def shell_sort(alist):
     n = len(alist)
     # 初始步长
@@ -33,9 +32,7 @@ def shell_sort(alist):
 alist = [54,26,93,17,77,31,44,55,20]
 shell_sort(alist)
 print(alist)
-
-</code>
-</pre>
+python
 
 
 ## 时间复杂度
