--- a/scripts/17.归并排序.md
+++ b/scripts/17.归并排序.md
@@ -10,8 +10,7 @@
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/Merge-sort-example.gif)
 
 
-<pre>
-<code>
+```python
 def merge_sort(alist):
     if len(alist) <= 1:
         return alist
@@ -41,6 +40,4 @@ def merge(left, right):
 alist = [54,26,93,17,77,31,44,55,20]
 sorted_alist = merge_sort(alist)
 print(sorted_alist)
-
-</code>
-</pre>
+```
