--- a/scripts/20.二叉树.md
+++ b/scripts/20.二叉树.md
@@ -26,8 +26,7 @@
 
 ## 树的实现
 
-<pre>
-<code>
+```python
 
 class Node(object):
     
@@ -63,5 +62,4 @@ class Tree(object):
                 return
             else:
                 queue.append(cur_node.rchild)
-</code>
-</pre>
+```
