--- a/scripts/21.二叉树的遍历.md
+++ b/scripts/21.二叉树的遍历.md
@@ -8,8 +8,7 @@
 
 ## 广度优先遍历(层次遍历) BFS (breadth-first) 
 从树的root开始，从上到下从从左到右遍历整个树的节点
-<pre>
-<code>
+```python
 def breadth_travel(self):
         """广度遍历"""
     if self.root is None:
@@ -23,8 +22,7 @@ def breadth_travel(self):
         if cur_node.rchild is not None:
             queue.append(cur_node.rchild)
 
-</code>
-</pre>
+```
 
 
 
@@ -35,8 +33,7 @@ def breadth_travel(self):
 那么深度遍历有重要的三种方法。这三种方式常被用于访问树的节点，它们之间的不同在于访问每个节点的次序不同。这三种遍历分别叫做先序遍历（preorder），中序遍历（inorder）和后序遍历（postorder）。我们来给出它们的详细定义，然后举例看看它们的应用。
 
 * 先序遍历 在先序遍历中，我们先访问根节点，然后递归使用先序遍历访问左子树,再递归使用先序遍历访问右子树:</br>根节点->左子树->右子树
-<pre>
-<code>
+```python
     def preorder(self, node):
         """先序遍历"""
         if node is None:
@@ -46,11 +43,9 @@ def breadth_travel(self):
         self.preorder(node.lchild)
         
         self.preorder(node.rchild)
-</code>
-</pre>
+```
 * 中序遍历 在中序遍历中，我们递归使用中序遍历访问左子树，然后访问根节点，最后再递归使用中序遍历访问右子树:</br>左子树->根节点->右子树
-<pre>
-<code>
+```python
     def inorder(self,node):
         '''中序遍历'''
         
@@ -59,11 +54,9 @@ def breadth_travel(self):
         self.inorder(node.lchild)
         print(node.elem, end = ' ')
         self.inorder(node.rchild) 
-</code>
-</pre>
+```
 * 后序遍历 在后序遍历中，我们先递归使用后序遍历访问左子树和右子树，最后访问根节点:</br>左子树->右子树->根节点
-<pre>
-<code>
+```python
     def postorder(self,node):
         '''后序'''
         if node is None:
@@ -71,8 +64,7 @@ def breadth_travel(self):
         self.postorder(node.lchild)
         self.postorder(node.rchild)
         print(node.elem, end = ' ')
-</code>
-</pre>
+```
 
 
 ### 树的反推
@@ -81,8 +73,7 @@ def breadth_travel(self):
 
 ### 二叉树实现的全部代码
 
-<pre>
-<code>
+```python
 ## 树的实现
 
 class Node(object):
@@ -179,5 +170,4 @@ tree.inorder(tree.root)
 print('')
 tree.postorder(tree.root)
 
-</code>
-</pre>
+```
