--- a/scripts/14.插入排序.md
+++ b/scripts/14.插入排序.md
@@ -12,8 +12,7 @@
 
 ![image](https://github.com/xiaoxingchen505/DataStructure-Algorithm-Notes/blob/master/images/Insertion-sort-example.gif)
 
-<pre>
-<code>
+```python
 def insert_sort(alist):
     # 从第二个位置，即下标为1的元素开始向前插入
     for i in range(1, len(alist)):
@@ -25,8 +24,7 @@ def insert_sort(alist):
 alist = [54,26,93,17,77,31,44,55,20]
 insert_sort(alist)
 print(alist)
-</code>
-</pre>
+python
 
 ## 时间复杂度
 
