--- a/scripts/18.二分查找.md
+++ b/scripts/18.二分查找.md
@@ -12,9 +12,7 @@
 
 
 ## 二分类查找，递归实现
-<pre>
-<code>
-
+```python
 def binary_search(alist,item):
     '''二分查找，递归'''
     n = len(alist)
@@ -33,15 +31,12 @@ li = [17,20,26,31,44,54,55,77,93]
 print(binary_search(li,17))
 print(binary_search(li,55))
 
-
-</code>
-</pre>
+```
 
 
 
 ## 二分类查找，非递归实现
-<pre>
-<code>
+```python
 def binary_search_2(alist,item):
     """二分查找，非递归"""
     n = len(alist)
@@ -62,8 +57,7 @@ li = [17,20,26,31,44,54,55,77,93]
 print(binary_search_2(li,17))
 print(binary_search_2(li,55))
 
-</code>
-</pre>
+```
 
 
 ## 时间复杂度
